--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,22 +1,32 @@
-  #配置端口
-  server:
-    port: 8081
-    tomcat:
-      uri-encoding: utf-8
+#配置端口
+server:
+  port: 8081
+  tomcat:
+    uri-encoding: utf-8
 #  servlet:
 #    context-path: /test
 
-  #配置mysql
-  spring:
-    datasource:
-      url: jdbc:mysql://localhost:3306/test_database?useUnicode=true&characterEncoding=UTF-8&useSSL=false
-      driver-class-name: com.mysql.jdbc.Driver
-      username: root
-      password: root
+#配置公司mysql
+spring:
+  datasource:
+    #公司mysql访问地址
+    url: jdbc:mysql://47.102.200.238:30411/suty?useUnicode=true&characterEncoding=UTF-8&useSSL=false
+#    url: jdbc:mysql://127.0.0.1:3306/suty?useUnicode=true&characterEncoding=UTF-8&useSSL=false
+    driver-class-name: com.mysql.jdbc.Driver
+    username: root
+#    password: root
+    password: yV2jJxvNs8BD
 
-  #配置jpa及视图层
-  jpa:
-    database: MYSQL
-    show-sql: true
-    hibernate:
-      ddl-auto: update
+##自动创建表
+#  jpa:
+#    hibernate:
+#      ddl-auto: update
+#    show-sql: true
+
+#配置jpa及视图层
+
+
+#日志管理
+logging:
+  path: ~/logs
+  config: classpath:logback.xml
