--- a/jpa/pom.xml
+++ b/jpa/pom.xml
@@ -67,6 +67,17 @@
             <version>3.1</version>
         </dependency>
 
+        <dependency> <!-- swagger2API文档支持 start-->
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>2.7.0</version>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>2.7.0</version>
+        </dependency><!-- swagger2API文档支持 end-->
+
     </dependencies>
 
     <build>
