--- a/jpa/src/main/resources/application.yml
+++ b/jpa/src/main/resources/application.yml
@@ -16,7 +16,7 @@ spring:
       maxOpenPreparedStatements: 20
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
       use-new-id-generator-mappings: true
     show-sql: true
 
@@ -30,7 +30,7 @@ logging:
 swagger:
   title: API接口文档
   description: z7-x Api Documentation
-  version: 1.0.0
+  version: v.1.0
   contact:
     name: 谢中奇
     url: https://www.baidu.com
