--- a/jpa/pom.xml
+++ b/jpa/pom.xml
@@ -76,6 +76,10 @@
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger-ui</artifactId>
             <version>2.7.0</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
         </dependency><!-- swagger2API文档支持 end-->
 
     </dependencies>
