--- a/practice/pom.xml
+++ b/practice/pom.xml
@@ -38,6 +38,12 @@
             </exclusions>
         </dependency>
 
+        <dependency><!--springboot读取application.yml自定义属性-->
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
+
         <dependency><!-- 引入JPA -->
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
