--- a/mybatis/pom.xml
+++ b/mybatis/pom.xml
@@ -61,8 +61,8 @@
 
         <dependency><!--mybatis核心配置文件 start-->
             <groupId>org.mybatis</groupId>
-            <artifactId>mybatis-spring</artifactId>
-            <version>2.0.0</version>
+            <artifactId>mybatis</artifactId>
+            <version>3.4.6</version>
         </dependency>
 
         <dependency>
@@ -100,6 +100,10 @@
         <dependency>
             <groupId>jakarta.persistence</groupId>
             <artifactId>jakarta.persistence-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
         </dependency>
         <!--end-->
 
