--- a/jpa/pom.xml
+++ b/jpa/pom.xml
@@ -21,6 +21,9 @@
     </properties>
 
     <dependencies>
+        <!--父子工程依赖-->
+
+        <!--end-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
